<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rsu.myproject.IntoMap"
    android:background="@drawable/bgrsu">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/imvbuild"
                android:src="@drawable/building"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/imvpark"
                android:src="@drawable/park"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/imvfood"
                android:src="@drawable/food"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/build_name"
                android:id="@+id/txtbuild"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/font_2" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/park_name"
                android:id="@+id/txtpark"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/font_2" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                android:id="@+id/txtfood"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/font_2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/imvcafe"
                android:src="@drawable/cafe"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/imvcopy"
                android:src="@drawable/copy"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/imvhere"
                android:src="@drawable/location"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/cafe_name"
                android:id="@+id/txtcafe"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/font_2" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/copy_name"
                android:id="@+id/txtcopy"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/font_2" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/here_point"
                android:id="@+id/txthere"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/font_2" />
        </LinearLayout>

    </LinearLayout>

    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
